# automatik_installation

./: .env  .env.example  .gitignore  README.md  create_dotenv.py  docker-compose.yml  init_vault.py  products_tik.json  pyproject.toml  setup.py  tik_db.py
config/: config.py
docs/: influx_config.md  minio_config.md
vault/config/: vault.json
