[tool.poetry]
name = "automatik_installation"
version = "0.1.0"
description = ""
authors = ["okazdal <okazdal@sekuritim.com>"]

[tool.poetry.dependencies]
python = "^3.9"
hvac = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
